--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <html>
 	<head>
-		<title>Zain's Portfolio!!!!!!</title>
+		<title>Zain's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 						<h1>Zain's Portfolio<br />
 						</h1>
 						<p>Cloud Practitioner | Data Analyst | Mechanical Engineer </p>
-						<p>Skilled in SQL, Python, Power BI, AWS</p>                              
+						<p>Skilled in SQL, Python, AWS, Power BI </p>                              
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
