--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Zain</a>
+						<a href="index.html" class="logo">Zain's Projects</a>
 					</header>
 
 				<!-- Nav -->
