--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 										<h2><a href="https://public.3.basecamp.com/p/grUxq98Q7hVqRyqatzPRZL9p">Project 5<br />
 										</a></h2>
 									</header>
-									<a href="https://public.3.basecamp.com/p/grUxq98Q7hVqRyqatzPRZL9p" class="image fit"><img src="images/amaZAIN_youtube_logo_with_name_amazainzone_79bc224d-51d1-4acc-b421-b7e15219cd49.png" alt="" /></a>
+									<a href="https://public.3.basecamp.com/p/grUxq98Q7hVqRyqatzPRZL9p" class="image fit"><img src="SD(REMA).jpg" alt="" /></a>
 									<p>This project is about...</p>
 									<ul class="actions special">
 										<li><a href="https://public.3.basecamp.com/p/grUxq98Q7hVqRyqatzPRZL9p" class="button">View project</a></li>
