--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 										</a></h2>
 									</header>
 									<a href="https://public.3.basecamp.com/p/grUxq98Q7hVqRyqatzPRZL9p" class="image fit"><img src="images/SD(REMA).jpg" alt="" /></a>
-									<p>This project is about...</p>
+									<p>Developed a cutting-edge device capable of withstanding high levels of radiation exposure, remotely controlled using a joystick, flex sensors, and a potentiometer for precise manipulation of small crucibles. Elevating the user experience, the device incorporates haptic feedback, providing users with a tactile sensation when securely grasping components.</p>
 									<ul class="actions special">
 										<li><a href="https://public.3.basecamp.com/p/grUxq98Q7hVqRyqatzPRZL9p" class="button">View project</a></li>
 									</ul>
