--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Intro -->
     <div id="intro">
-        <h1>Zain's Portfolio <br />
+        <h1>Zain's Portfolio<br />
         </h1>
         <p>Cloud Practitioner | Data Analyst | Mechanical Engineer </p>
         <p>Skilled in SQL, Python, AWS, Power BI </p>
@@ -49,7 +49,7 @@
         <article class="post featured">
             <header class="major">
 
-                <h2><a href="#">Project 1<br />
+                <h2><a href="#" target="_blank">Project 1<br />
                 </a></h2>
                 <p>In this project...</p>
             </header>
@@ -64,7 +64,7 @@
             <article>
                 <header>
 
-                    <h2><a href="#">Project 2<br />
+                    <h2><a href="#" target="_blank">Project 2<br />
                     </a></h2>
                 </header>
                 <a href="#" class="image fit"><img src="images/_1eeb0510-c55a-4736-b263-1c6411d0ac72.jpeg" alt="" /></a>
@@ -77,7 +77,76 @@
             <article>
                 <header>
 
-                    <h2><a href="#">Project 3<br />
+                    <h2><a href="#" target="_blank">Project 3<br />
                     </a></h2>
                 </header>
-                <a href="#" class="image fit"><img src="images/_93739c6c-73a7-4178-95e8-245a9e021c96.jpeg" alt=""
+                <a href="#" class="image fit"><img src="images/_93739c6c-73a7-4178-95e8-245a9e021c96.jpeg" alt="" /></a>
+                <p>This project is about...</p>
+                <ul class="actions special">
+                    <li><a href="#" class="button">View project</a></li>
+                </ul>
+            </article>
+
+            <article>
+                <header>
+
+                    <h2><a href="#" target="_blank">Project 4<br />
+                    </a></h2>
+                </header>
+                <a href="#" class="image fit"><img src="images/amaZAIN_neon_ede72976-e90a-44a7-bff2-639f611b4919.png" alt="" /></a>
+                <p>This project is about...</p>
+                <ul class="actions special">
+                    <li><a href="#" class="button">View project</a></li>
+                </ul>
+            </article>
+
+            <article>
+                <header>
+
+                    <h2><a href="https://public.3.basecamp.com/p/grUxq98Q7hVqRyqatzPRZL9p" target="_blank">Project 5<br />
+                    </a></h2>
+                </header>
+                <a href="https://public.3.basecamp.com/p/grUxq98Q7hVqRyqatzPRZL9p" class="image fit"><img src="images/SD(REMA).jpg" alt="" /></a>
+                <p>Developed a cutting-edge device capable of withstanding high levels of radiation exposure, remotely controlled using a joystick, flex sensors, and a potentiometer for precise manipulation of small crucibles. Elevating the user experience, the device incorporates haptic feedback, providing users with a tactile sensation when securely grasping components.</p>
+                <ul class="actions special">
+                    <li><a href="https://public.3.basecamp.com/p/grUxq98Q7hVqRyqatzPRZL9p" class="button">View project</a></li>
+                </ul>
+            </article>
+        </section>
+
+        <section class="split contact">
+            <section class="alt">
+                <h3>Location</h3>
+                <p>Dallas, Tx<br />
+                </p>
+            </section>
+            <section>
+                <h3>Phone</h3>
+                <p><a href="#">(817) 629-8220</a></p>
+            </section>
+            <section>
+                <h3>Email</h3>
+                <p><a href="#">zkadtani@gmail.com</a></p>
+            </section>
+            <section>
+                <h3>Social</h3>
+                <ul class="icons alt">
+                    <li><a href="https://www.linkedin.com/in/zka1/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
+                    <li><a href="https://github.com/ZainAdtani" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+                </ul>
+            </section>
+        </section>
+    </div>
+</div>
+
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
+
+</body>
+</html>
