--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									</a></h2>
 									<p>In this project...</p>
 								</header>
-								<iframe title="Adidas Power BI Project_Zain" width="1000" height="550" src="https://app.powerbi.com/reportEmbed?reportId=86eb1622-b602-460f-91ae-c0b21d33bace&autoAuth=true&ctid=15df134d-4390-48ad-b14f-322d114b9927" frameborder="0" allowFullScreen="true"></iframe>
+								<iframe title="Adidas Power BI Project_Zain" width="800" height="550" src="https://app.powerbi.com/reportEmbed?reportId=86eb1622-b602-460f-91ae-c0b21d33bace&ctid=15df134d-4390-48ad-b14f-322d114b9927" frameborder="0" allowFullScreen="true"></iframe>
 								<ul class="actions special">
 									<li><a href="#" class="button large">View project</a></li>
 								</ul>
