--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									</a></h2>
 									<p>In this project...</p>
 								</header>
-								<iframe title="Report Section" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiODY1ZTA5YzUtYzUwMy00MmY0LThiNjUtMjlmOTJjOWE2YTQxIiwidCI6IjE1ZGYxMzRkLTQzOTAtNDhhZC1iMTRmLTMyMmQxMTRiOTkyNyJ9&embedImagePlaceholder=true" frameborder="0" allowFullScreen="true"></iframe>
+								<iframe title="Report Section" width="1024" height="612" src="https://app.powerbi.com/view?r=eyJrIjoiODY1ZTA5YzUtYzUwMy00MmY0LThiNjUtMjlmOTJjOWE2YTQxIiwidCI6IjE1ZGYxMzRkLTQzOTAtNDhhZC1iMTRmLTMyMmQxMTRiOTkyNyJ9" frameborder="0" allowFullScreen="true"></iframe>
 								<ul class="actions special">
 									<li><a href="#" class="button large">View project</a></li>
 								</ul>
