--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="#">Project 1<br />
+									<h2><a>Adidas US Sales<br />
 									</a></h2>
 									<p>
 									The aim of this project is to assess the sales of Adidas USA during the period of 2020-2021. The report will examine vital metrics including overall sales, monthly sales, monthly sales growth rate, total operating profit, operating profit margin, and monthly profit margin change. This analysis will provide valuable insights to enhance the company's sales performance and guide future improvement strategies. Let the dashboard speak for itself.
@@ -61,7 +61,7 @@
 								</header>
 								<iframe title="Report Section" width="800" height="486" src="https://app.powerbi.com/view?r=eyJrIjoiODY1ZTA5YzUtYzUwMy00MmY0LThiNjUtMjlmOTJjOWE2YTQxIiwidCI6IjE1ZGYxMzRkLTQzOTAtNDhhZC1iMTRmLTMyMmQxMTRiOTkyNyJ9" frameborder="0" allowFullScreen="true"></iframe>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View project</a></li>
+									<li><a href="https://public.3.basecamp.com/p/QNivHr3mYfn2fwhEiXwbQXFz" class="button large">View project</a></li>
 								</ul>
 							</article>
 
