--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">Project 2<br />
+										<h2><a href="#">US Coffee Shop<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/_1eeb0510-c55a-4736-b263-1c6411d0ac72.jpeg" alt="" /></a>
 									<p>This project is about...</p>
+									</header>
+									<iframe title="US Coffee Power BI Project_Zain" width="800" height="486" src="https://app.powerbi.com/view?r=eyJrIjoiNjM0Y2ZkNGYtNTI3Zi00YzNmLWJmYTYtYzI4YWU5NzRiZTNiIiwidCI6IjE1ZGYxMzRkLTQzOTAtNDhhZC1iMTRmLTMyMmQxMTRiOTkyNyJ9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe>
 									<ul class="actions special">
 										<li><a href="#" class="button">View project</a></li>
 									</ul>
