--- a/index.html
+++ b/index.html
@@ -65,6 +65,22 @@
 								</ul>
 							</article>
 
+						<article class="post featured">
+								<header class="major">
+									
+									<h2><a href="#">US Coffee Shop<br /> 
+									</a></h2>
+									<p>
+									The aim of this project is to...
+										Please click the enticing "VIEW PROJECT" button to explore a comprehensive analysis.
+									</p>
+								</header>
+								<iframe title="US Coffee Power BI Project_Zain" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiNjM0Y2ZkNGYtNTI3Zi00YzNmLWJmYTYtYzI4YWU5NzRiZTNiIiwidCI6IjE1ZGYxMzRkLTQzOTAtNDhhZC1iMTRmLTMyMmQxMTRiOTkyNyJ9" frameborder="0" allowFullScreen="true"></iframe>
+								<ul class="actions special">
+									<li><a href="https://public.3.basecamp.com/p/QNivHr3mYfn2fwhEiXwbQXFz" class="button large">View project</a></li>
+								</ul>
+							</article>
+
 						<!-- Posts -->
 							<section class="posts">
 								<article>
