--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 										<h2><a href="#">Project 3<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/_93739c6c-73a7-4178-95e8-245a9e021c96.jpeg" alt="" /></a>
+									<a href="#" class="image fit"><img src="" alt="" /></a>
 									<p>This project is about...</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View project</a></li>
@@ -100,10 +100,10 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">Project 4<br />
+										<h2><a href="#">Project<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/amaZAIN_neon_ede72976-e90a-44a7-bff2-639f611b4919.png" alt="" /></a>
+									<a href="#" class="image fit"><img src="" alt="" /></a>
 									<p>This project is about...</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View project</a></li>
@@ -113,7 +113,7 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://public.3.basecamp.com/p/grUxq98Q7hVqRyqatzPRZL9p">Project 5<br />
+										<h2><a href="https://public.3.basecamp.com/p/grUxq98Q7hVqRyqatzPRZL9p">Mechanical Engineering: Senior Design Project<br />
 										</a></h2>
 									</header>
 									<a href="https://public.3.basecamp.com/p/grUxq98Q7hVqRyqatzPRZL9p" class="image fit"><img src="images/SD(REMA).jpg" alt="" /></a>
