--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 										Please click the enticing "VIEW PROJECT" button to explore a comprehensive analysis that showcases Adidas' exceptional performance and achievements.
 									</p>
 								</header>
-								<iframe title="Report Section" width="800" height="486" src="https://app.powerbi.com/view?r=eyJrIjoiODY1ZTA5YzUtYzUwMy00MmY0LThiNjUtMjlmOTJjOWE2YTQxIiwidCI6IjE1ZGYxMzRkLTQzOTAtNDhhZC1iMTRmLTMyMmQxMTRiOTkyNyJ9" frameborder="0" allowFullScreen="true"></iframe>
+								<iframe title="Report Section" width="800" height="490" src="https://app.powerbi.com/view?r=eyJrIjoiODY1ZTA5YzUtYzUwMy00MmY0LThiNjUtMjlmOTJjOWE2YTQxIiwidCI6IjE1ZGYxMzRkLTQzOTAtNDhhZC1iMTRmLTMyMmQxMTRiOTkyNyJ9" frameborder="0" allowFullScreen="true"></iframe>
 								<ul class="actions special">
 									<li><a href="https://public.3.basecamp.com/p/QNivHr3mYfn2fwhEiXwbQXFz" class="button large">View project</a></li>
 								</ul>
@@ -71,11 +71,11 @@
 									<h2><a href="#">US Coffee Shop<br /> 
 									</a></h2>
 									<p>
-									The aim of this project is to...
+									The Coffee Chain is a popular cafeteria operating in four markets across 20 states, offering a range of products. This report aims to identify profitability issues and their causes, utilizing Power BI and Tableau software for analysis. Key metrics such as Sales Per Month, YOY%, GPM%, and GPM YOY% have been calculated to evaluate store profitability. The report highlights underperforming products and their contributing factors.
 										Please click the enticing "VIEW PROJECT" button to explore a comprehensive analysis.
 									</p>
 								</header>
-								<iframe title="US Coffee Power BI Project_Zain" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiNjM0Y2ZkNGYtNTI3Zi00YzNmLWJmYTYtYzI4YWU5NzRiZTNiIiwidCI6IjE1ZGYxMzRkLTQzOTAtNDhhZC1iMTRmLTMyMmQxMTRiOTkyNyJ9" frameborder="0" allowFullScreen="true"></iframe>
+								<iframe title="US Coffee Power BI Project_Zain" width="800" height="490" src="https://app.powerbi.com/view?r=eyJrIjoiNjM0Y2ZkNGYtNTI3Zi00YzNmLWJmYTYtYzI4YWU5NzRiZTNiIiwidCI6IjE1ZGYxMzRkLTQzOTAtNDhhZC1iMTRmLTMyMmQxMTRiOTkyNyJ9" frameborder="0" allowFullScreen="true"></iframe>
 								<ul class="actions special">
 									<li><a href="https://public.3.basecamp.com/p/HeoKFD9w9uyH742599nLjXE3" class="button large">View project</a></li>
 								</ul>
