--- a/index.html
+++ b/index.html
@@ -89,6 +89,23 @@
 								<article>
 									<header>
 									
+										<h2><a href="https://public.3.basecamp.com/p/ySH6wE1nb9Lud1kTofN7hKit">Power BI: Microsoft Income Statement<br />
+										</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="" alt="" /></a>
+									<p> I successfully completed a project focused on building an income statement dashboard using Power BI. Leveraging data sourced from Microsoft's investor website, I meticulously imported and transformed the information, resulting in visually compelling tables, cards, and charts. This project has equipped me with the expertise to proficiently create comprehensive financial statement dashboards enriched with diverse and impactful visualizations.
+										Please click the enticing "VIEW PROJECT" button to find the dataset and steps.
+									</p>
+									</header>
+									<iframe title="Microsoft Income Statement" width="500" height="370" src="https://app.powerbi.com/view?r=eyJrIjoiNGZhYTI4MjMtYjM0Yy00ZGMwLWFhMDctZDc0OGI2MTNkYmI2IiwidCI6IjE1ZGYxMzRkLTQzOTAtNDhhZC1iMTRmLTMyMmQxMTRiOTkyNyJ9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe>
+									<ul class="actions special">
+									<li><a href="https://public.3.basecamp.com/p/ySH6wE1nb9Lud1kTofN7hKit" class="button large">View project</a></li>
+								</ul>
+							</article>
+
+								<article>
+									<header>
+									
 										<h2><a href="https://3.basecamp.com/3945211/buckets/33108126/todolists/6262569417">Power BI: Superstore Sales & Profit<br />
 										</a></h2>
 									</header>
