--- a/index.html
+++ b/index.html
@@ -144,14 +144,17 @@
 										<h2><a href="https://public.3.basecamp.com/p/grUxq98Q7hVqRyqatzPRZL9p">Mechanical Engineering: Senior Design Project<br />
 										</a></h2>
 									</header>
-									<a href="https://public.3.basecamp.com/p/grUxq98Q7hVqRyqatzPRZL9p" class="image fit"><img src="images/SD(REMA).jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="" alt="" /></a>
 									<p>
 										Developed a cutting-edge device capable of withstanding high levels of radiation exposure, remotely controlled using a joystick, flex sensors, and a potentiometer for precise manipulation of small crucibles. Elevating the user experience, the device incorporates haptic feedback, providing users with a tactile sensation when securely grasping components.
 									</p>
+									</header>
+									<a href="https://public.3.basecamp.com/p/grUxq98Q7hVqRyqatzPRZL9p" class="image fit"><img src="images/SD(REMA).jpg" alt="" /></a>
 									<ul class="actions special">
 										<li><a href="https://public.3.basecamp.com/p/grUxq98Q7hVqRyqatzPRZL9p" class="button">View project</a></li>
 									</ul>
 								</article>
+
 
 								<article>
 									<header>
@@ -159,7 +162,7 @@
 										<h2><a href="https://scratch.mit.edu/projects/866833288">Scratch Project: Hoops Havoc <br />
 										</a></h2>
 									</header>
-									<a href="https://public.3.basecamp.com/p/grUxq98Q7hVqRyqatzPRZL9p" class="image fit"><img src="images/SD(REMA).jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="" alt="" /></a>
 									<p>
 										Get ready for some bouncy fun in "Hoops Havoc"! In this Scratch project, you'll be catching basketballs while trying to dodge soccer balls and baseballs. Use the arrow keys to move your player sprite and score points by nabbing those basketballs. But watch out! If you get hit by the other balls, you'll lose lives. I made sure to include conditionals, loops, and variables to spice things up. 
 										To top it off, I created my very own custom block, which takes some input. So, let's jump in and have a ball with "Hoops Havoc"!
