--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
 										Please click the enticing "VIEW PROJECT" button to explore a comprehensive analysis that showcases Adidas' exceptional performance and achievements.
 									</p>
 								</header>
-								<iframe title="Report Section" width="800" height="490" src="https://app.powerbi.com/view?r=eyJrIjoiODY1ZTA5YzUtYzUwMy00MmY0LThiNjUtMjlmOTJjOWE2YTQxIiwidCI6IjE1ZGYxMzRkLTQzOTAtNDhhZC1iMTRmLTMyMmQxMTRiOTkyNyJ9" frameborder="0" allowFullScreen="true"></iframe>
-								<ul class="actions special">
+								<iframe title="Adidas Power BI Project_Zain" width="1140" height="500" src="https://app.powerbi.com/reportEmbed?reportId=1cb35b0b-e3d0-4619-921d-acaef934f306&autoAuth=true&ctid=544fd7c3-014b-490a-898a-eb49bad7e3b5" frameborder="0" allowFullScreen="true"></iframe>								<ul class="actions special">
 									<li><a href="https://public.3.basecamp.com/p/QNivHr3mYfn2fwhEiXwbQXFz" class="button large">View project</a></li>
 								</ul>
 							</article>
