--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 										Click the enticing "VIEW PROJECT" button to explore a comprehensive analysis.
 									</p>
 								</header>
-								<iframe title="Report Section" width="800" height="500" src="https://app.powerbi.com/view?r=eyJrIjoiYmUyOWVlMzktMDE1OC00YjFmLTkxZDItNTY4OTc0MzBjZDA5IiwidCI6IjE1ZGYxMzRkLTQzOTAtNDhhZC1iMTRmLTMyMmQxMTRiOTkyNyJ9" frameborder="0" allowFullScreen="true"></iframe>
+								<iframe title="Employee Atrrition" width="800" height="500" src="https://app.powerbi.com/reportEmbed?reportId=70299767-00ce-46a8-a703-1f699331fcaa&autoAuth=true&ctid=544fd7c3-014b-490a-898a-eb49bad7e3b5" frameborder="0" allowFullScreen="true"></iframe>
 								<ul class="actions special">
 									<li><a href="https://public.3.basecamp.com/p/G88ZFA2AsQbB3vDNUrd3r1vS" class="button large">View project</a></li>
 								</ul>
@@ -75,7 +75,7 @@
 										Please click the enticing "VIEW PROJECT" button to explore a comprehensive analysis that showcases Adidas' exceptional performance and achievements.
 									</p>
 								</header>
-								<iframe title="Adidas Power BI Project_Zain" width="1140" height="500" src="https://app.powerbi.com/reportEmbed?reportId=1cb35b0b-e3d0-4619-921d-acaef934f306&autoAuth=true&ctid=544fd7c3-014b-490a-898a-eb49bad7e3b5" frameborder="0" allowFullScreen="true"></iframe>								<ul class="actions special">
+								<iframe title="Adidas Power BI Project_Zain" width="800" height="500" src="https://app.powerbi.com/reportEmbed?reportId=1cb35b0b-e3d0-4619-921d-acaef934f306&autoAuth=true&ctid=544fd7c3-014b-490a-898a-eb49bad7e3b5" frameborder="0" allowFullScreen="true"></iframe>								<ul class="actions special">
 									<li><a href="https://public.3.basecamp.com/p/QNivHr3mYfn2fwhEiXwbQXFz" class="button large">View project</a></li>
 								</ul>
 							</article>
@@ -91,7 +91,7 @@
 										Please click the enticing "VIEW PROJECT" button to explore a comprehensive analysis.
 									</p>
 								</header>
-								<iframe title="US Coffee Power BI Project_Zain" width="800" height="490" src="https://app.powerbi.com/view?r=eyJrIjoiNjM0Y2ZkNGYtNTI3Zi00YzNmLWJmYTYtYzI4YWU5NzRiZTNiIiwidCI6IjE1ZGYxMzRkLTQzOTAtNDhhZC1iMTRmLTMyMmQxMTRiOTkyNyJ9" frameborder="0" allowFullScreen="true"></iframe>
+								<iframe title="US Coffee Power BI Project_Zain" width="800" height="500" src="https://app.powerbi.com/reportEmbed?reportId=93ab3e21-5822-432c-b06d-3dc54ca7f475&autoAuth=true&ctid=544fd7c3-014b-490a-898a-eb49bad7e3b5" frameborder="0" allowFullScreen="true"></iframe>
 								<ul class="actions special">
 									<li><a href="https://public.3.basecamp.com/p/HeoKFD9w9uyH742599nLjXE3" class="button large">View project</a></li>
 								</ul>
@@ -113,7 +113,7 @@
 										Please click the enticing "VIEW PROJECT" button to find the dataset and steps.
 									</p>
 									</header>
-									<iframe title="Microsoft Income Statement" width="500" height="370" src="https://app.powerbi.com/view?r=eyJrIjoiNGZhYTI4MjMtYjM0Yy00ZGMwLWFhMDctZDc0OGI2MTNkYmI2IiwidCI6IjE1ZGYxMzRkLTQzOTAtNDhhZC1iMTRmLTMyMmQxMTRiOTkyNyJ9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe>
+									<iframe title="Microsoft Income Statement" width="500" height="370" src="https://app.powerbi.com/reportEmbed?reportId=612dd0b6-5fca-4539-a13d-63e3ab6fe49f&autoAuth=true&ctid=544fd7c3-014b-490a-898a-eb49bad7e3b5" frameborder="0" allowFullScreen="true"></iframe>							
 									<ul class="actions special">
 									<li><a href="https://public.3.basecamp.com/p/ySH6wE1nb9Lud1kTofN7hKit" class="button large">View project</a></li>
 								</ul>
@@ -131,8 +131,8 @@
 										Please click the enticing "VIEW PROJECT" button to find the dataset.
 									</p>
 									</header>
-								<iframe title="Report Section" width="500" height="370" src="https://app.powerbi.com/view?r=eyJrIjoiODU2NWNmZGMtZjliMi00NWE4LTgyMjgtYWIxNjQ3MmJhMWQyIiwidCI6IjE1ZGYxMzRkLTQzOTAtNDhhZC1iMTRmLTMyMmQxMTRiOTkyNyJ9" frameborder="0" allowFullScreen="true"></iframe>
-								<ul class="actions special">
+									<iframe title="Superstore Sales & Profit" width="500" height="370" src="https://app.powerbi.com/reportEmbed?reportId=06322d04-bc7d-44bc-b680-c4d0540ee591&autoAuth=true&ctid=544fd7c3-014b-490a-898a-eb49bad7e3b5" frameborder="0" allowFullScreen="true"></iframe>
+									<ul class="actions special">
 									<li><a href="https://3.basecamp.com/3945211/buckets/33108126/todolists/6262569417" class="button large">View project</a></li>
 								</ul>
 							</article>
