--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 										Click the enticing "VIEW PROJECT" button to explore a comprehensive analysis.
 									</p>
 								</header>
-								<iframe title="Employee Atrrition" width="800" height="500" src="https://app.powerbi.com/reportEmbed?reportId=70299767-00ce-46a8-a703-1f699331fcaa&autoAuth=true&ctid=544fd7c3-014b-490a-898a-eb49bad7e3b5" frameborder="0" allowFullScreen="true"></iframe>
+								<iframe title="Report Section" width="900" height="600" src="https://app.powerbi.com/view?r=eyJrIjoiNmE4NDcyYjAtMzBhOC00MDFjLTljNDAtNWIzNjQ5MTNlZjZhIiwidCI6IjU0NGZkN2MzLTAxNGItNDkwYS04OThhLWViNDliYWQ3ZTNiNSJ9" frameborder="0" allowFullScreen="true"></iframe>
 								<ul class="actions special">
 									<li><a href="https://public.3.basecamp.com/p/G88ZFA2AsQbB3vDNUrd3r1vS" class="button large">View project</a></li>
 								</ul>
