--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 										Click the enticing "VIEW PROJECT" button to explore a comprehensive analysis.
 									</p>
 								</header>
-								<iframe title="Employee Atrrition" width="900" height="600" src="https://app.powerbi.com/view?r=eyJrIjoiNmE4NDcyYjAtMzBhOC00MDFjLTljNDAtNWIzNjQ5MTNlZjZhIiwidCI6IjU0NGZkN2MzLTAxNGItNDkwYS04OThhLWViNDliYWQ3ZTNiNSJ9&pageName=ReportSectionf9ab0f67cd1709b60077" frameborder="0" allowFullScreen="true"></iframe>
+								<iframe title="Employee Atrrition" width="900" height="700" src="https://app.powerbi.com/view?r=eyJrIjoiNmE4NDcyYjAtMzBhOC00MDFjLTljNDAtNWIzNjQ5MTNlZjZhIiwidCI6IjU0NGZkN2MzLTAxNGItNDkwYS04OThhLWViNDliYWQ3ZTNiNSJ9&pageName=ReportSectionf9ab0f67cd1709b60077" frameborder="0" allowFullScreen="true"></iframe>
 								<ul class="actions special">
 									<li><a href="https://public.3.basecamp.com/p/G88ZFA2AsQbB3vDNUrd3r1vS" class="button large">View project</a></li>
 								</ul>
@@ -75,7 +75,7 @@
 										Please click the enticing "VIEW PROJECT" button to explore a comprehensive analysis that showcases Adidas' exceptional performance and achievements.
 									</p>
 								</header>
-								<iframe title="Adidas Power BI Project_Zain" width="900" height="600" src="https://app.powerbi.com/view?r=eyJrIjoiMTU0ZDBiMDAtNTU5ZS00ZjI3LTliNjktNzIzOTgyZjgyNmUwIiwidCI6IjU0NGZkN2MzLTAxNGItNDkwYS04OThhLWViNDliYWQ3ZTNiNSJ9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe>
+								<iframe title="Adidas Power BI Project_Zain" width="900" height="800" src="https://app.powerbi.com/view?r=eyJrIjoiMTU0ZDBiMDAtNTU5ZS00ZjI3LTliNjktNzIzOTgyZjgyNmUwIiwidCI6IjU0NGZkN2MzLTAxNGItNDkwYS04OThhLWViNDliYWQ3ZTNiNSJ9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe>
 								<ul class="actions special">
 									<li><a href="https://public.3.basecamp.com/p/QNivHr3mYfn2fwhEiXwbQXFz" class="button large">View project</a></li>
 								</ul>
@@ -92,7 +92,7 @@
 										Please click the enticing "VIEW PROJECT" button to explore a comprehensive analysis.
 									</p>
 								</header>
-								<iframe title="US Coffee Power BI Project_Zain" width="800" height="500" src="https://app.powerbi.com/reportEmbed?reportId=93ab3e21-5822-432c-b06d-3dc54ca7f475&autoAuth=true&ctid=544fd7c3-014b-490a-898a-eb49bad7e3b5" frameborder="0" allowFullScreen="true"></iframe>
+								<iframe title="US Coffee Power BI Project_Zain - US Coffee" width="900" height="900" src="https://app.powerbi.com/view?r=eyJrIjoiY2U0YzFjMTctN2NiYi00ZjA2LTk2YTYtZmQ5ZTcxYWY4ZjdiIiwidCI6IjU0NGZkN2MzLTAxNGItNDkwYS04OThhLWViNDliYWQ3ZTNiNSJ9" frameborder="0" allowFullScreen="true"></iframe>
 								<ul class="actions special">
 									<li><a href="https://public.3.basecamp.com/p/HeoKFD9w9uyH742599nLjXE3" class="button large">View project</a></li>
 								</ul>
