--- a/index.html
+++ b/index.html
@@ -80,6 +80,20 @@
 									<li><a href="https://public.3.basecamp.com/p/QNivHr3mYfn2fwhEiXwbQXFz" class="button large">View project</a></li>
 								</ul>
 							</article>
+
+							<article class="post featured">
+								<header class="major">
+									
+									<h2><a href="https://public.3.basecamp.com/p/Vdc3CEYBP9bPASF5x2Cujopa">Power BI: Prime Video <br /> 
+									</a></h2>
+									<p>
+									Introducing the Amazon Prime Video Analytics Dashboard - a comprehensive and visually engaging platform designed to explore the vast world of entertainment. This Power BIA dashboard boasts six key performance indicator (KPI) cards, providing valuable insights such as Total Title Ratings, Genres, Directors, Start Date, Early Start Date (1920), and Latest Start Date (2021). The dashboard also features informative Bar Charts for Total Shows by Ratings and Genres, a dynamic Map Visual showcasing Total Shows by Country, and an insightful Area Line Chart comparing Total Shows by Release Year for both movies and TV shows. Additionally, a visually appealing Doughnut Chart breaks down the distribution of movies and TV shows. With its sleek and organized presentation, this Amazon Prime Video dashboard is the perfect addition to your portfolio, allowing viewers to discover, analyze, and appreciate the captivating world of streaming entertainment.
+										Please click the enticing "VIEW PROJECT" button to get the dataset.
+								</header>
+								<iframe title="Report Section" width="900" height="600" src="https://app.powerbi.com/view?r=eyJrIjoiZWRkYzJiMTgtOTVjOS00ZjU3LTljNjgtNWQ4MzczNTZjYjZlIiwidCI6IjU0NGZkN2MzLTAxNGItNDkwYS04OThhLWViNDliYWQ3ZTNiNSJ9" frameborder="0" allowFullScreen="true"></iframe>								<ul class="actions special">
+									<li><a href="https://public.3.basecamp.com/p/Vdc3CEYBP9bPASF5x2Cujopa" class="button large">View project</a></li>
+								</ul>
+							</article>
 						
 
 							<article class="post featured">
