--- a/index.html
+++ b/index.html
@@ -94,6 +94,19 @@
 									<li><a href="https://public.3.basecamp.com/p/Vdc3CEYBP9bPASF5x2Cujopa" class="button large">View project</a></li>
 								</ul>
 							</article>
+
+							<article class="post featured">
+								<header class="major">
+									
+									<h2><a href="https://public.3.basecamp.com/p/wCWauqvBbUifPGSzgC9kuZMp">Power BI: Netflix Analytics <br /> 
+									</a></h2>
+									<p>
+									Discover the Netflix Analytics Dashboard - a visually engaging platform that unlocks the vast world of streaming entertainment. With six essential KPI cards, explore Total Titles, Ratings, and diverse Genres. Uncover global insights with an interactive Map Visual of content distribution across countries. Delve into the Top 10 Countries by Movies and TV Shows, and journey through time with Release Dates displayed on Bar and Line Charts. Unearth viewers' preferences with the Ratings chart and savor a doughnut chart showcasing content distribution. Sleek and insightful, this Netflix Analytics Dashboard is a must-have for entertainment enthusiasts and industry analysts to explore, analyze, and appreciate the captivating world of Netflix's streaming empire.
+										Please click the enticing "VIEW PROJECT" button to get the dataset.
+								</header>
+								<iframe title="Report Section" width="800" height="500" src="https://app.powerbi.com/view?r=eyJrIjoiMzRmNDVmMTItZGI4MS00ZTVlLThhZjItNzZkYTBjOWRiMjc3IiwidCI6IjU0NGZkN2MzLTAxNGItNDkwYS04OThhLWViNDliYWQ3ZTNiNSJ9" frameborder="0" allowFullScreen="true"></iframe>									<li><a href="https://public.3.basecamp.com/p/wCWauqvBbUifPGSzgC9kuZMp" class="button large">View project</a></li>
+								</ul>
+							</article>
 						
 
 							<article class="post featured">
