--- a/index.html
+++ b/index.html
@@ -153,6 +153,23 @@
 								<article>
 									<header>
 									
+										<h2><a href="https://public.3.basecamp.com/p/jqYMw2PnSMnmEZPj5ESEu5hr">Power BI: UK Bank Customer Insights <br />
+										</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="" alt="" /></a>
+									<p> Introducing the "UK Bank Customer Insights" Power PI project! Leveraging the Kaggle dataset, this dynamic dashboard offers compelling visuals like donut charts to highlight gender-based balances, region-wise and job classification-based summaries, and age and gender ratio analyses. Accompanied by insightful KPI cards, this project provides a comprehensive view of the UK bank's diverse clientele, facilitating informed decision-making and strategic planning.
+										Please click the enticing "VIEW PROJECT" button to find the dataset.
+									</p>
+									</header>
+									<iframe title="Report Section" width="550" height="370" src="https://app.powerbi.com/view?r=eyJrIjoiZjVjMmNhMDEtYzE2YS00YzczLTlmMzAtMTljYTQ2MmEzZjhjIiwidCI6IjU0NGZkN2MzLTAxNGItNDkwYS04OThhLWViNDliYWQ3ZTNiNSJ9" frameborder="0" allowFullScreen="true"></iframe>
+									<ul class="actions special">
+									<li><a href="https://public.3.basecamp.com/p/jqYMw2PnSMnmEZPj5ESEu5hr" class="button large">View project</a></li>
+								</ul>
+							</article>
+
+								<article>
+									<header>
+									
 										<h2><a href="https://public.3.basecamp.com/p/ySH6wE1nb9Lud1kTofN7hKit">Power BI: Microsoft Income Statement<br />
 										</a></h2>
 									</header>
