--- a/index.html
+++ b/index.html
@@ -84,6 +84,21 @@
 							<article class="post featured">
 								<header class="major">
 									
+									<h2><a href="https://public.3.basecamp.com/p/jPrf9AoKSFqHKWGioqXhyefr">Power BI: Financial Dashboard<br /> 
+									</a></h2>
+									<p>
+										Welcome to my captivating financial dashboard, where we analyze diverse sales transactions across countries. Uncover hidden stories through advanced visualizations and insightful KPIs. Explore metrics like total cost of gross sales, net sales, total quantity sold, and total profit to make informed decisions. Join us in unraveling the mysteries of financial data and unlocking its true potential. Welcome to a world of data-driven discovery and enlightenment in finance.
+										Please click the enticing "VIEW PROJECT" button to get the dataset.
+									</p>
+								</header>
+								<iframe title="Report Section" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiZGI4MTdiY2UtNWZiMS00NmY4LTk0MjUtMzA2ZjRhYWU4MjdiIiwidCI6IjU0NGZkN2MzLTAxNGItNDkwYS04OThhLWViNDliYWQ3ZTNiNSJ9" frameborder="0" allowFullScreen="true"></iframe>
+									<li><a href="https://public.3.basecamp.com/p/jPrf9AoKSFqHKWGioqXhyefr" class="button large">View project</a></li>
+								</ul>
+							</article>
+
+							<article class="post featured">
+								<header class="major">
+									
 									<h2><a href="https://public.3.basecamp.com/p/Vdc3CEYBP9bPASF5x2Cujopa">Power BI: Prime Video <br /> 
 									</a></h2>
 									<p>
