--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 										<h2><a href="https://public.3.basecamp.com/p/grUxq98Q7hVqRyqatzPRZL9p">Mechanical Engineering: Senior Design Project<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/SD(REMA)-transformed.jpeg" alt="" /></a>
 									<p>
 										Developed a cutting-edge device capable of withstanding high levels of radiation exposure, remotely controlled using a joystick, flex sensors, and a potentiometer for precise manipulation of small crucibles. Elevating the user experience, the device incorporates haptic feedback, providing users with a tactile sensation when securely grasping components.
 									</p>
